@@ -1,3 +1,4 @@
+Incorporated gravity force into right-hand-side wall force
 Fixed: Thermal energy increases slightly during collision with frictionless mode
 Make sure timeline and charts don't record beyond the max time range, to reduce memory leaks
 Fixed: Drops don't get cleared on playback
